[package]
name = "portable_atomic_enum"
version = "0.1.0"
authors = ["Thomas Bächler <thomas.baechler@gmx.de>"]
edition = "2021"

description = "An attribute to create an portable atomic wrapper around a C-style enum"
repository = "https://github.com/bugadani/portable_atomic_enum"
keywords = ["atomic", "enum"]
categories = ["concurrency"]
license = "MIT"

[workspace]
members = [
    ".",
    "./macros"
]

[dependencies]
portable_atomic_enum_macros = { version = "0.1.0", path = "./macros" }
