[package]
name = "portable_atomic_enum"
version = "0.1.2"
authors = ["Thomas Bächler <thomas.baechler@gmx.de>", "Dániel Buga <bugadani@gmail.com>"]
edition = "2021"

description = "An attribute to create an portable atomic wrapper around a C-style enum"
repository = "https://github.com/bugadani/portable_atomic_enum"
keywords = ["atomic", "enum"]
categories = ["concurrency"]
license = "MIT"

[workspace]
members = [
    ".",
    "./macros"
]

[dependencies]
portable-atomic = { version = "1.5", default-features = false }
portable_atomic_enum_macros = { version = "0.1.2", path = "./macros" }
